src/styles/global.scss
// Global Styles
@import './variables';

// Reset and base styles
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 16px;
  scrollbar-gutter: stable;
}

.webkitForceHardwareAcceleration {
  -webkit-transform: translate3d(0, 0, 0);
  -webkit-backface-visibility: hidden;
  -webkit-transform-style: preserve-3d;
}

#app {
  background: $backgroundColor;
  min-height: 100vh;
  // font-family: Avenir, Helvetica, Arial, sans-serif;
  font-family: 'helvetica-neue-world', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-align: center;
  color: $textColor;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

// Typography
h1,
h2,
h3 {
  font-family: nexa, sans-serif;
  font-weight: 600;
  font-style: normal;
  font-weight: 700;
  letter-spacing: 0.3px;
}

h1 {
  font-size: 2rem;
  line-height: 100%;
}

h2 {
  font-size: 1.5rem;
  line-height: 130%;
  margin: 20px 0;
  color: $headingColor;
}

p {
  font-size: 1rem;
  font-weight: 300;
  margin-bottom: 25px;
  line-height: 155%;

  em {
    font-style: italic;
  }
}

b {
  font-weight: 700;
}

ul {
  list-style-position: inside;
  margin: 0 auto 25px;
}

li {
  line-height: 155%;
}

a {
  color: $redPunch;
  text-decoration: underline;
  cursor: pointer;

  &:hover {
    color: $redPunch;
  }
}

img {
  width: 100%;
  max-width: 100%;
  height: auto;
}

// Utility classes
.unicode {
  font-family: 'Arial Unicode MS', sans-serif !important;
}

.small {
  font-size: 0.7rem;

  &.caps {
    line-height: 80%;
  }
}

.caps {
  text-transform: uppercase;
}

// Components

.back-link {
  text-align: left;
  margin-bottom: 20px;
  a {
    color: $redPunch;
  }
}

// Home page
main {
  .project-link {
    position: relative;
    text-decoration: none;
    color: inherit;
    max-width: 1200px;
    &.cover {
      width: 100%;
      max-width: 1600px;
      .video-composite {
        display: grid;
        grid-template-columns: 1fr;
        .video-bg {
          width: 100%;
          height: 200px;
          video {
            width: 100%;
            height: 100%;
            object-fit: cover;
          }
          &.not-mobile {
            display: none;
          }
        }
        @media (min-width: 640px) {
          grid-template-columns: 1fr 1fr 1fr;
          .video-bg {
            height: 400px;
            &.not-mobile {
              display: block;
            }
          }
        }
      }
    }
  }

  figure {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 16px;

    cursor: pointer;
    img,
    .video-composite {
      display: block;
      width: 100%;
      border-radius: 16px;
      border: 2px solid transparent;
      transition: border 0.3s ease;
      overflow: hidden;
    }

    figcaption {
      text-align: left;
      color: $textColor !important;
      text-decoration: none !important;
      display: block;
      @media (min-width: 840px) {
        display: flex;
        align-items: baseline;
        justify-content: space-between;
      }
      margin-top: 20px;
      font-size: 1.5rem;
      font-weight: 700;
      .title {
        margin-right: 16px;
      }
    }

    .cta {
      margin-top: 12px;
      display: block;
      @media (min-width: 840px) {
        margin-top: 0;
      }
      background: transparent;
      border: 2px solid $redPunch;
      -webkit-border-radius: 8px;
      border-radius: 8px;
      padding: 3px 6px;
      font-size: 1rem;
      font-weight: 600;
      cursor: pointer;
      margin-top: 12px;
      display: inline-block;
      -webkit-transition: all 0.3s ease;
      transition: all 0.3s ease;
      color: $redPunch;
      text-transform: uppercase;

      .unicode {
        color: $redPunch;
        -webkit-transition: transform 0.3s ease;
        transition: transform 0.3s ease;
        display: inline-block;
      }
    }
    &:hover {
      img,
      .video-composite {
        border: 2px solid $redPunch;
      }
      .cta {
        background: $redPunch;
        color: white;

        .unicode {
          color: white;
          -webkit-transform: translate(2px, -2px);
          transform: translate(2px, -2px);
        }
      }
    }
  }
}

// Media queries
@media (min-width: 451px) {
  li a.thumb:hover {
    -webkit-transform: translate(-3px, -3px);
    transform: translate(-3px, -3px);
    -webkit-box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
  }
}

